<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layoutDirection="ltr"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">



    <TextView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/call"
        android:gravity="center_vertical"
        android:text="@string/fa_icon_call"/>
    <TextView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/sendsms"
        android:gravity="center_vertical"
        android:text="@string/fa_icon_sms"/>
    <TextView
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/goToCustomers"
        android:gravity="center_vertical"
        android:text="@string/fa_icon_customers_contacts"/>
    <TextView
        android:textDirection="rtl"
        android:text="hello"
        android:textSize="8pt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:id="@+id/textView"
        android:layout_weight="0.99" />



</LinearLayout>
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="50dp"-->